--- a/AMIT-C_Programming_Project/AMIT-C_Programming_Project.vcxproj
+++ b/AMIT-C_Programming_Project/AMIT-C_Programming_Project.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="SDB.h" />
+    <ClInclude Include="SDBAPP.h" />
     <ClInclude Include="STD.h" />
   </ItemGroup>
   <ItemGroup>
