--- a/AMIT-C_Programming_Project/AMIT-C_Programming_Project.vcxproj.filters
+++ b/AMIT-C_Programming_Project/AMIT-C_Programming_Project.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="SDB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SDBAPP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
